DOCS: add description about torch.nn.Module

--- a/15-linear_regression_with_module.ipynb
+++ b/15-linear_regression_with_module.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "QRVdeyLdoAgx"
       },
@@ -50,7 +50,7 @@
         "id": "jq3pcIW9pCpI",
         "outputId": "53643196-edf9-491f-809f-9f09eaddc4b0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "PPqnE4q3pe1M"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "M3Pzd3R3ppkJ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "1AZL2oqQqpYw"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "id": "EY8cog9CMKAp",
         "outputId": "1c529b0e-21dd-4fa7-b1ea-c1bab0bd8eda"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
         "id": "83Oug_y0rcy9",
         "outputId": "1fd3baf8-ef83-4fde-c8a3-8fc6988bcbed"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Model"
+        "# Model\n",
+        "\n",
+        "## `torch.nn.Module`\n",
+        "PyTorch로 신경망을 설계하기 위한 조건\n",
+        "1. `torch.nn.Module`을 상속해야 함.\n",
+        "2. `__init()__` override<br>\n",
+        "  모델에서 사용될 module, activation function 등 정의.\n",
+        "3. `forward()` override<br>\n",
+        "  모델에서 실행되어야 하는 계산 정의."
       ],
       "metadata": {
         "id": "DYvBAqnXImT7"
@@ -227,7 +235,7 @@
       "metadata": {
         "id": "p8Zt1GwfrrwW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +257,7 @@
         "id": "U5npqM3hvBXV",
         "outputId": "33a6ad6d-d4e5-42ad-b7cc-83f68a9bd70f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +293,7 @@
         "id": "mVAAkUrvvS03",
         "outputId": "a6706606-9e88-4b6e-c7fc-fcb715a18b63"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +323,7 @@
         },
         "outputId": "d4f49b16-0b05-4d30-a992-d31d2dcd25d2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +355,7 @@
         "id": "3KaD2hn5yHnd",
         "outputId": "ed28c6fa-1347-4547-b850-0b199fcd5152"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +492,7 @@
         "id": "m_oMh8yv5Ns4",
         "outputId": "25d41c5a-6517-42e5-eb5e-2a0746ea8a8f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +556,7 @@
       "metadata": {
         "id": "hS6gfojL6Ln1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +586,7 @@
         "id": "s5xNKhbo9ZFR",
         "outputId": "90b3f5ff-aad6-4dd4-d2a4-f111d888ab52"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +629,7 @@
         "id": "KG7L6riT8zpA",
         "outputId": "48cad41a-19ad-46f4-ce46-057219952e5c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +667,7 @@
         "id": "u5RUZP9sFK_1",
         "outputId": "aba0767b-69c1-414f-b747-0757a3fd40aa"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
