DOCS: add descriptions

--- a/02-filling_tensor.ipynb
+++ b/02-filling_tensor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHVzYlBMqU2umCwjV+Wtm5",
+      "authorship_tag": "ABX9TyO0lzauLQkFXo39Y5vRve0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "J57UJBP8ClBk"
       },
@@ -59,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_yaM7H7LCoD1",
-        "outputId": "9d3a7da7-56be-4122-91cc-2f2d86cb4e08"
+        "outputId": "613737c4-6bd6-4010-bd2d-ef0c3150aad4"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,6 +73,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- `zeros()`\n",
+        "- `ones()`\n",
+        "- `full() / fill()`\n",
+        "- `arange()`\n",
+        "- `linspace()`\n",
+        "- `empty()`\n",
+        "- `eye()`"
+      ],
+      "metadata": {
+        "id": "yogUCNZb7htU"
+      }
     },
     {
       "cell_type": "markdown",
@@ -97,6 +112,7 @@
         "print(a_torch.dtype)\n",
         "print(a_torch, end=\"\\n\\n\")\n",
         "\n",
+        "# tensorflow\n",
         "a_tf = tf.zeros(shape=(3,2))\n",
         "print(a_tf.dtype)\n",
         "print(a_tf)"
@@ -106,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0nJC-7GsC7qo",
-        "outputId": "170a8e5a-c4f3-4c1c-865c-d8a13b60ede0"
+        "outputId": "3753cad3-9442-4639-dffe-d0a9cd38dc16"
       },
       "execution_count": 4,
       "outputs": [
@@ -166,7 +182,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "26vd3yyPDTIL",
-        "outputId": "c0a64199-4fb0-47ff-e5e4-6442c473bc1a"
+        "outputId": "8b011f05-c08c-4152-a73b-891027ba4d22"
       },
       "execution_count": 5,
       "outputs": [
@@ -197,7 +213,8 @@
       "cell_type": "markdown",
       "source": [
         "## full / fill\n",
-        "- 행렬을 특정 값으로 가득 채움"
+        "- 행렬을 특정 값으로 가득 채움\n",
+        "- numpy, pytorch는 `full()`, tensorflow는 `fill()`"
       ],
       "metadata": {
         "id": "ZX9GOrcBDZPf"
@@ -226,9 +243,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1kvqhrwODcyX",
-        "outputId": "537d14ab-d41a-4265-88f4-f3c2d1724e1e"
+        "outputId": "8e2501bf-1005-4f48-af00-4cefab1af6a5"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +268,7 @@
       "source": [
         "## 원하는 값으로 행렬 채우기\n",
         "- arange: 시작과 끝값을 설정하고 특정 값이 계속 더해지는 1차원 벡터 생성\n",
-        "- linspace: 시작과 끝값을 설정하고 특정 값으로 등분하는 1차원 벡터 샐성\n",
+        "- linspace: 시작과 끝값을 설정하고 특정 값으로 등분하는 1차원 벡터 생성\n",
         "- empty: 빈 값으로 행렬 생성\n",
         "- eye: identity matrix 생성\n",
         "\n"
@@ -263,7 +280,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### arange"
+        "### arange\n",
+        "끝값을 포함하지 않고 특정 값 더해 벡터 생성<br>\n",
+        "`arange(start, finish, add_val)`<br>\n",
+        "범위: [start, finish)\n",
+        "- tensorflow는 `arange()` 대신 `range()` 사용"
       ],
       "metadata": {
         "id": "V7WnsqgdEypd"
@@ -273,19 +294,26 @@
       "cell_type": "code",
       "source": [
         "print(range(0,10,1))\n",
+        "\n",
+        "# numpy\n",
         "print(np.arange(0, 1, 0.1))\n",
         "a = np.arange(0,24,2).reshape(3,4)\n",
-        "print(a.dtype)\n",
-        "print(a)"
+        "print(a)\n",
+        "\n",
+        "# torch\n",
+        "print(torch.arange(0, 10, 1))\n",
+        "\n",
+        "# tensorflow\n",
+        "print(tf.range(0, 10, 1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xO__9EMBD3kX",
-        "outputId": "9fc02b13-694d-4c22-edd2-55de6f88e66b"
+        "outputId": "eda935c2-fa21-4531-9d79-7fdd9696e187"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,10 +321,11 @@
           "text": [
             "range(0, 10)\n",
             "[0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9]\n",
-            "int64\n",
             "[[ 0  2  4  6]\n",
             " [ 8 10 12 14]\n",
-            " [16 18 20 22]]\n"
+            " [16 18 20 22]]\n",
+            "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+            "tf.Tensor([0 1 2 3 4 5 6 7 8 9], shape=(10,), dtype=int32)\n"
           ]
         }
       ]
@@ -304,7 +333,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### linspace"
+        "### linspace\n",
+        "끝값을 포함하여 벡터에 포함될 값의 개수를 지정해 등분하여 벡터 생성<br>\n",
+        "`arange(start, finish, num_val)`<br>\n",
+        "범위: [start, finish]\n",
+        "\n"
       ],
       "metadata": {
         "id": "2jwAzvRKEcL_"
@@ -335,9 +368,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cu0fUnp8Eb2t",
-        "outputId": "55d1a2ab-1961-448e-edc5-dbb245a5e2af"
+        "outputId": "dc075b25-d813-46fd-849f-62249cc081a4"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +392,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### empty / eye"
+        "### empty\n",
+        "크기를 지정하여 빈 텐서 생성.\n",
+        "- 초기화를 하지 않기 때문에 속도가 빠름.\n",
+        "- tensorflow `tf.empty()` 지원 안 함.\n",
+        "- `tf.experimental.numpy.empty((4,2))`로 사용"
       ],
       "metadata": {
         "id": "XAQE_tR3EfdV"
@@ -370,7 +407,7 @@
       "source": [
         "# empty\n",
         "# numpy\n",
-        "a = np.empty((4,2)) # 초기화를 안 하기 때문에 빠름.\n",
+        "a = np.empty((4,2))\n",
         "print(a.dtype)\n",
         "print(a, end='\\n\\n')\n",
         "\n",
@@ -379,36 +416,95 @@
         "print(a_torch.dtype)\n",
         "print(a_torch, end='\\n\\n')\n",
         "\n",
-        "# eye\n",
-        "a = np.eye(3) # identitiy matrix\n",
-        "print(a)"
+        "# tensorflow\n",
+        "# a_tf = tf.empty((4,2)) 지원 안 함\n",
+        "a_tf = tf.experimental.numpy.empty((4,2))\n",
+        "print(a_tf)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KTX87ddTEf39",
-        "outputId": "569780ab-0b7a-4603-ae63-d4d0ecc989ce"
+        "outputId": "4a542bf5-2fbc-4b2f-aa03-80a471691679"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "float64\n",
-            "[[5.06454545e-310 0.00000000e+000]\n",
-            " [0.00000000e+000 0.00000000e+000]\n",
-            " [0.00000000e+000 0.00000000e+000]\n",
-            " [0.00000000e+000 0.00000000e+000]]\n",
+            "[[0. 0.]\n",
+            " [0. 0.]\n",
+            " [0. 0.]\n",
+            " [0. 0.]]\n",
+            "\n",
             "torch.float32\n",
-            "tensor([[-5.9084e+18,  4.4923e-41],\n",
-            "        [ 3.8010e-06,  3.3450e-41],\n",
-            "        [ 1.6460e+19,  2.9423e+26],\n",
-            "        [ 0.0000e+00,  0.0000e+00]])\n",
+            "tensor([[ 4.6581e-32,  4.4183e-41],\n",
+            "        [-1.4129e+36,  3.1028e-41],\n",
+            "        [ 4.4842e-44,  0.0000e+00],\n",
+            "        [ 6.7262e-44,  0.0000e+00]])\n",
+            "\n",
+            "tf.Tensor(\n",
+            "[[0. 0.]\n",
+            " [0. 0.]\n",
+            " [0. 0.]\n",
+            " [0. 0.]], shape=(4, 2), dtype=float64)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### eye\n",
+        "대칭행렬 생성.\n",
+        "row와 col의 사이즈가 같은 행렬이기 때문에, 크기 하나만 인수로 받음."
+      ],
+      "metadata": {
+        "id": "kXO6DdQz8PTk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# eye\n",
+        "# numpy\n",
+        "a = np.eye(3) # identitiy matrix\n",
+        "print(a)\n",
+        "\n",
+        "# torch\n",
+        "a_t = torch.eye(3)\n",
+        "print(a_t)\n",
+        "\n",
+        "# tensorflow\n",
+        "a_tf = tf.eye(3)\n",
+        "print(a_tf)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wHAsnHPw8Pmd",
+        "outputId": "04cf85e6-a93e-45f3-ae43-dafa8f618916"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "[[1. 0. 0.]\n",
             " [0. 1. 0.]\n",
-            " [0. 0. 1.]]\n"
+            " [0. 0. 1.]]\n",
+            "tensor([[1., 0., 0.],\n",
+            "        [0., 1., 0.],\n",
+            "        [0., 0., 1.]])\n",
+            "tf.Tensor(\n",
+            "[[1. 0. 0.]\n",
+            " [0. 1. 0.]\n",
+            " [0. 0. 1.]], shape=(3, 3), dtype=float32)\n"
           ]
         }
       ]
