--- a/03-translation_between_numpy_torch_tensorflow.ipynb
+++ b/03-translation_between_numpy_torch_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEDvlrafzgoOfQC9/2NFYh",
+      "authorship_tag": "ABX9TyONS3Eo8+R7kh7fJIIQUFHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "KnaD2g_gfDxm"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -59,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5DTc0OHLfJrI",
-        "outputId": "0cc73458-d9fa-4a1f-d96f-b42d9c0ed354"
+        "outputId": "3372a15a-e31c-4be1-a889-d43403a0e564"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,6 +88,7 @@
         "```\n",
         "## tf → numpy\n",
         "- `np = np.array(a_tf)`: 서로 영향x\n",
+        "- `np = a_tf.array`: 서로 영향x\n",
         "- `np = a_tf.numpy()`: 서로 영향x\n",
         "\n",
         "## torch → numpy\n",
@@ -101,7 +102,11 @@
         "\n",
         "## numpy -> torch\n",
         "- `torch = torch.tensor(a_np)`: 서로 영향x\n",
-        "- `torch = torch.from_numpy(a_np)`: 서로 영향"
+        "- `torch = torch.from_numpy(a_np)`: 서로 영향o\n",
+        "\n",
+        "## torch -> tf\n",
+        "- `tf = tf.constant(a_torch)`: 서로 영향o\n",
+        "- `tf = tf.convert_to_tensor(a_torch)`: 서로 영향o\n"
       ],
       "metadata": {
         "id": "IdNLEyJBO2Fp"
@@ -122,13 +127,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GqFuk0YFeebs",
-        "outputId": "3c43ad33-bd93-40a9-ac19-f0c838cb7903"
+        "outputId": "fc016d7c-a03a-4321-89c4-31fec2f815f4"
       },
       "outputs": [
         {
@@ -189,9 +194,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Y7yXQDO-ujv",
-        "outputId": "22f8838a-21e8-4777-9818-59c379c1a7db"
+        "outputId": "b3f6d455-626c-419c-e37d-24acf2e24fd3"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,9 +235,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ooYbX_XwQUXq",
-        "outputId": "94f18cbf-13d3-4b37-e809-334fb3918ea2"
+        "outputId": "28fd5994-72fd-4c46-d023-a43d79344a0d"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,9 +281,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L5OPBzSW-yVI",
-        "outputId": "8d3060b0-39d2-445a-8d21-e65771ee5d66"
+        "outputId": "1f271044-62f7-4c3b-e9a5-7db458f28f6e"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,9 +322,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9ac6b7b-58fc-427b-d9ed-896391d14e10"
+        "outputId": "2ebc1be5-dd6f-49b8-bb61-7178d9a43284"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,9 +353,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pj65VykPSwC8",
-        "outputId": "7f6be71e-6029-4d17-b539-c16c622d6cb0"
+        "outputId": "1343b947-6db7-4dd6-a4aa-85efa55177d9"
       },
-      "execution_count": 24,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +365,7 @@
             "\n",
             "<c_np[2] = 777>\n",
             "c_np:  [  1   2 777   4]\n",
-            "a_tf:  tf.Tensor([1 2 3 4], shape=(4,), dtype=int64)\n"
+            "a_tf:  tf.Tensor([1 2 3 4], shape=(4,), dtype=int32)\n"
           ]
         }
       ]
@@ -430,7 +435,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SrxHF4lU_dRj",
-        "outputId": "91602813-f570-45af-fa7b-4f96e35c5c43"
+        "outputId": "d4ed422a-fec1-47e7-c0c9-a29eb8af57d3"
       },
       "execution_count": 9,
       "outputs": [
@@ -473,7 +478,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7AqFW6PZ_o4q",
-        "outputId": "fbec4eb8-e0cd-4bce-e857-1ce7467c2087"
+        "outputId": "cd52e7b8-5436-409c-cf09-5ff8403f3432"
       },
       "execution_count": 10,
       "outputs": [
@@ -505,7 +510,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n7jZ-F1u_p1e",
-        "outputId": "f6d9994a-f679-4086-8841-8a9ff992858a"
+        "outputId": "833a43de-fbed-40da-b6b3-427056d12f1b"
       },
       "execution_count": 11,
       "outputs": [
@@ -533,6 +538,7 @@
     {
       "cell_type": "code",
       "source": [
+        "print(a_np)\n",
         "a_np[2] = 777\n",
         "print(a_np)\n",
         "print(a_tf)\n",
@@ -543,17 +549,87 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pyIPHlVH_ui9",
-        "outputId": "22e40c38-0e8e-4889-c3b4-b3edc244da64"
+        "outputId": "25763969-bf44-477b-b323-345ab4282261"
       },
-      "execution_count": 12,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[1 2 3 4]\n",
             "[  1   2 777   4]\n",
-            "tf.Tensor([1 2 3 4], shape=(4,), dtype=int64)\n",
+            "tf.Tensor([1 2 3 4], shape=(4,), dtype=int32)\n",
             "tf.Tensor([1 2 3 4], shape=(4,), dtype=int64)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## torch -> tf"
+      ],
+      "metadata": {
+        "id": "8Sk5TAD4729K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_torch = torch.tensor([1, 2, 3, 4])\n",
+        "print(a_torch)\n",
+        "x = tf.constant(a_torch)\n",
+        "a_torch[2] = 100\n",
+        "print(a_torch)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lKHn9-mq8Xuu",
+        "outputId": "ddd72b1b-a4b3-4459-b9ca-cf433907509b"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3, 4])\n",
+            "tensor([  1,   2, 100,   4])\n",
+            "tf.Tensor([  1   2 100   4], shape=(4,), dtype=int64)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_torch = torch.tensor([1, 2, 3, 4])\n",
+        "print(a_torch)\n",
+        "x = tf.convert_to_tensor(a_torch)\n",
+        "a_torch[2] = 100\n",
+        "print(a_torch)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1GpZB8Za8t8f",
+        "outputId": "6450c0d8-7a2a-4233-c2ee-e2032d1d29be"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3, 4])\n",
+            "tensor([  1,   2, 100,   4])\n",
+            "tf.Tensor([  1   2 100   4], shape=(4,), dtype=int64)\n"
           ]
         }
       ]
