FIX: modify tf->numpy, torch->numpy description error

--- a/03-translation_between_numpy_torch_tensorflow.ipynb
+++ b/03-translation_between_numpy_torch_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONS3Eo8+R7kh7fJIIQUFHs",
+      "authorship_tag": "ABX9TyOcEXjmfJ8G/7mmpRX20wh5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "KnaD2g_gfDxm"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "id": "5DTc0OHLfJrI",
         "outputId": "3372a15a-e31c-4be1-a889-d43403a0e564"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,12 +88,11 @@
         "```\n",
         "## tf → numpy\n",
         "- `np = np.array(a_tf)`: 서로 영향x\n",
-        "- `np = a_tf.array`: 서로 영향x\n",
         "- `np = a_tf.numpy()`: 서로 영향x\n",
         "\n",
         "## torch → numpy\n",
         "- `np = np.array(a_torch)`: 서로 영향x\n",
-        "- `np = a_torch.array`: 서로 영향(device=\"cpu\"에서만)\n",
+        "- `np = a_torch.numpy()`: 서로 영향(device=\"cpu\"에서만)\n",
         "- `np = a_torch.numpy().copy()`: 서로 영향x\n",
         "\n",
         "## numpy → tf\n",
@@ -127,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,7 +195,7 @@
         "id": "7Y7yXQDO-ujv",
         "outputId": "b3f6d455-626c-419c-e37d-24acf2e24fd3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +236,7 @@
         "id": "ooYbX_XwQUXq",
         "outputId": "28fd5994-72fd-4c46-d023-a43d79344a0d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +282,7 @@
         "id": "L5OPBzSW-yVI",
         "outputId": "1f271044-62f7-4c3b-e9a5-7db458f28f6e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +323,7 @@
         },
         "outputId": "2ebc1be5-dd6f-49b8-bb61-7178d9a43284"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +354,7 @@
         "id": "pj65VykPSwC8",
         "outputId": "1343b947-6db7-4dd6-a4aa-85efa55177d9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +436,7 @@
         "id": "SrxHF4lU_dRj",
         "outputId": "d4ed422a-fec1-47e7-c0c9-a29eb8af57d3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +479,7 @@
         "id": "7AqFW6PZ_o4q",
         "outputId": "cd52e7b8-5436-409c-cf09-5ff8403f3432"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +511,7 @@
         "id": "n7jZ-F1u_p1e",
         "outputId": "833a43de-fbed-40da-b6b3-427056d12f1b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +550,7 @@
         "id": "pyIPHlVH_ui9",
         "outputId": "25763969-bf44-477b-b323-345ab4282261"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,7 +590,7 @@
         "id": "lKHn9-mq8Xuu",
         "outputId": "ddd72b1b-a4b3-4459-b9ca-cf433907509b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +620,7 @@
         "id": "1GpZB8Za8t8f",
         "outputId": "6450c0d8-7a2a-4233-c2ee-e2032d1d29be"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
