FEAT: add the action of reshape() in non-contiguous situations

--- a/09-tensor_storage.ipynb
+++ b/09-tensor_storage.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZIJzIH5KQThh7Iihr3qEy",
+      "authorship_tag": "ABX9TyPFvvThF4dMvDaJ/xeh8SOx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,28 +41,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "62MDsceIQSve",
-        "outputId": "7dbb6f11-06ac-41b3-ba5b-f92ef382b375"
+        "outputId": "929a2ab0-0d2c-42ae-e655-2122accdfc03"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " -2.1574738025665283\n",
-            " -0.3487687110900879\n",
-            " 0.5054190754890442\n",
-            " 0.3268362283706665\n",
-            " -0.6415106058120728\n",
-            " 0.1692473143339157\n",
-            " -0.4657959043979645\n",
-            " 0.42953771352767944\n",
-            " 2.534769296646118\n",
+            " 0.07993819564580917\n",
+            " -0.6680573225021362\n",
+            " 1.4372423887252808\n",
+            " -0.04802791029214859\n",
+            " 3.21359920501709\n",
+            " -0.0708732083439827\n",
+            " -1.4636471271514893\n",
+            " -1.8654823303222656\n",
+            " 0.1301005333662033\n",
             "[torch.storage.TypedStorage(dtype=torch.float32, device=cpu) of size 9]\n"
           ]
         }
@@ -90,6 +90,7 @@
         "import torch\n",
         "\n",
         "a = torch.tensor([range(i,i+3) for i in [0,3,6]])\n",
+        "print(a)\n",
         "a_sub = a[1:,0] # 부분에 대한 view\n",
         "\n",
         "# Tensor a 와 a_sub 의 contiguous 여부 확인.\n",
@@ -110,14 +111,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ASwhvdhda7C7",
-        "outputId": "a9c16174-eddb-4dc6-f2f2-87de807417e2"
+        "outputId": "0e4dcd3d-8879-4662-fe15-04ce7673557b"
       },
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "tensor([[0, 1, 2],\n",
+            "        [3, 4, 5],\n",
+            "        [6, 7, 8]])\n",
             "True False\n",
             "True\n",
             "False\n",
@@ -159,9 +163,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TuzZxKVSePSB",
-        "outputId": "b738fc7d-c1b9-496a-80e8-3ab7985c867c"
+        "outputId": "34d0673c-d255-4107-b530-63a14ee49b8d"
       },
-      "execution_count": 28,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tUMYyOL9ioSG",
-        "outputId": "b53184aa-8b1b-4235-d84d-1a189106cf0c"
+        "outputId": "7a9ae097-167d-48dd-a06c-cd6818238ce5"
       },
-      "execution_count": 29,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,40 +246,84 @@
     {
       "cell_type": "code",
       "source": [
+        "print('contiguous한 경우')\n",
         "a_r = a.reshape((9,))\n",
         "a_r[3] = 777\n",
         "print('데이터 저장공간을 share함.')\n",
+        "print(a.storage().data_ptr() == a_r.storage().data_ptr())\n",
+        "print('둘 다 contiguous')\n",
+        "print(a.is_contiguous(), a_r.is_contiguous())\n",
+        "print('같은 인스턴스는 아님')\n",
+        "print(id(a.storage()) == id(a_r.storage()))\n",
         "print('a_r: af.reshape')\n",
         "print(a_r)\n",
         "print('a: orginal')\n",
-        "print(a)\n",
-        "print('a_t: transposed')\n",
-        "print(a_t)"
+        "print(a)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JgWp-YE2k3N4",
-        "outputId": "da1f53b7-ff92-4f48-e608-862101553eec"
+        "outputId": "630273ef-071a-4093-b24f-1f6200788a38"
       },
-      "execution_count": 30,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "contiguous한 경우\n",
             "데이터 저장공간을 share함.\n",
+            "True\n",
+            "둘 다 contiguous\n",
+            "True True\n",
+            "같은 인스턴스는 아님\n",
+            "False\n",
             "a_r: af.reshape\n",
             "tensor([  0,   1,   2, 777,   4,   5,   6,   7,   8])\n",
             "a: orginal\n",
             "tensor([[  0,   1,   2],\n",
             "        [777,   4,   5],\n",
-            "        [  6,   7,   8]])\n",
-            "a_t: transposed\n",
-            "tensor([[  0, 777,   6],\n",
-            "        [  1,   4,   7],\n",
-            "        [  2,   5,   8]])\n"
+            "        [  6,   7,   8]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('contiguous하지 않은 경우')\n",
+        "a_t = a.T\n",
+        "a_r = a_t.reshape((9,))\n",
+        "a_r[3] = 777\n",
+        "print('데이터 저장공간을 share하지 않음.')\n",
+        "print(a.storage().data_ptr() == a_r.storage().data_ptr())\n",
+        "print('a_r은 contiguous')\n",
+        "print(a_t.is_contiguous(), a_r.is_contiguous())\n",
+        "print('같은 인스턴스는 아님')\n",
+        "print(id(a.storage()) == id(a_sub.storage()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6j1F8SpA1nkq",
+        "outputId": "3816be01-56de-48cd-eab5-f8c4712ae2c7"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "contiguous하지 않은 경우\n",
+            "데이터 저장공간을 share하지 않음.\n",
+            "False\n",
+            "a_r은 contiguous\n",
+            "False True\n",
+            "같은 인스턴스는 아님\n",
+            "False\n"
           ]
         }
       ]
@@ -296,37 +344,41 @@
     {
       "cell_type": "code",
       "source": [
+        "a = torch.arange(9).reshape((3,3))\n",
+        "print(a)\n",
         "a_t = torch.transpose(a,0,1)\n",
         "print(a_t)\n",
-        "print(a_t.storage())\n",
-        "print(a_t.is_contiguous())"
+        "print('데이터 저장공간을 share함.')\n",
+        "print(a.storage().data_ptr() == a_t.storage().data_ptr())\n",
+        "print('transpose는 contiguous하지 않음')\n",
+        "print(a.is_contiguous(), a_t.is_contiguous())\n",
+        "print('같은 인스턴스는 아님')\n",
+        "print(id(a.storage()) == id(a_t.storage()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z5ChwyV6jl-r",
-        "outputId": "1e0869e0-e0cd-463f-9ed6-e0e3318d3da3"
+        "outputId": "d473e4db-34ea-4f3d-c8b2-f4dd1f50379c"
       },
-      "execution_count": 31,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[  0, 777,   6],\n",
-            "        [  1,   4,   7],\n",
-            "        [  2,   5,   8]])\n",
-            " 0\n",
-            " 1\n",
-            " 2\n",
-            " 777\n",
-            " 4\n",
-            " 5\n",
-            " 6\n",
-            " 7\n",
-            " 8\n",
-            "[torch.storage.TypedStorage(dtype=torch.int64, device=cpu) of size 9]\n",
+            "tensor([[0, 1, 2],\n",
+            "        [3, 4, 5],\n",
+            "        [6, 7, 8]])\n",
+            "tensor([[0, 3, 6],\n",
+            "        [1, 4, 7],\n",
+            "        [2, 5, 8]])\n",
+            "데이터 저장공간을 share함.\n",
+            "True\n",
+            "둘 다 contiguous\n",
+            "True False\n",
+            "같은 인스턴스는 아님\n",
             "False\n"
           ]
         }
@@ -335,6 +387,8 @@
     {
       "cell_type": "code",
       "source": [
+        "print('a_t의 값을 바꾸면 a에 적용')\n",
+        "\n",
         "a_t[0,1] = 999\n",
         "print(a_t)\n",
         "print('-------')\n",
@@ -347,14 +401,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QzVCycFFjqEn",
-        "outputId": "b9cfbcfa-463c-45d8-82ec-0c19007fecb0"
+        "outputId": "f774ea46-0e72-4b91-fb30-7bd207de2b21"
       },
-      "execution_count": 32,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "a_t의 값을 바꾸면 a에 적용\n",
             "tensor([[  0, 999,   6],\n",
             "        [  1,   4,   7],\n",
             "        [  2,   5,   8]])\n",
@@ -383,9 +438,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lG-2vP1blAGo",
-        "outputId": "3accc221-3064-4e5e-802f-b8f4274faacb"
+        "outputId": "e9ef2259-dabc-4703-a55a-56848ca3d651"
       },
-      "execution_count": 33,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,9 +483,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S9IisOqTk7lW",
-        "outputId": "03be0d86-c53a-400b-864a-a9d5bed5ada5"
+        "outputId": "8a9c8e27-ea67-47ff-d3e9-978539600465"
       },
-      "execution_count": 34,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,9 +516,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsxoie-ilpmU",
-        "outputId": "375064b5-c9d7-4cb4-ef73-8776f7a14dda"
+        "outputId": "7489b83a-7d3e-4f3a-a0d6-610c38e7c6da"
       },
-      "execution_count": 35,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,9 +550,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-OLzYLt7jsIy",
-        "outputId": "1f780e27-9edc-4cb4-db55-eb7b807edc9a"
+        "outputId": "efd35dc5-2161-484c-838b-ae8f74a7feaa"
       },
-      "execution_count": 36,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
