FEAT: add descriptions

--- a/Lecture-AI_programming/week07.ipynb
+++ b/Lecture-AI_programming/week07.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxADyEyk+I8K4Qg+hEKacE",
+      "authorship_tag": "ABX9TyP/Wm8wDcM25DC9xj/g4sT7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "u_xhaakVwkta"
       },
@@ -52,21 +52,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### inplace operation\n",
+        "## inplace operation\n",
         "원래 있던 것에서 update하는 방식\n",
-        "\n"
+        "- 계산 전 값이 필요하지 않을 때 사용.\n",
+        "- 추가 메모리 할당 없이 기존 할당된 메모리를 그대로 사용함.\n",
+        "- 함수 뒤에 언더바(`_`)를 붙임. ex) `add_()`, `scatter_()` 등.\n",
+        "- `+=`, `*=` 등도 inplace operation.\n"
       ],
       "metadata": {
         "id": "o_D3ipRA05gL"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "reshape() vs. resize()"
-      ],
-      "metadata": {
-        "id": "EWPLGsO52Hak"
       }
     },
     {
@@ -83,7 +77,7 @@
         "id": "gK2wmyB_3hc9",
         "outputId": "52206e06-a62e-4e03-a343-ff3575299617"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,6 +88,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `reshape()` vs. `resize()`\n",
+        "- `reshape()`는 바꾸고자 하는 shape의 원소의 개수가 다르면 오류가 나지만 `resize()`는 자동으로 맞춰줌.\n",
+        "- 빈 곳(안 맞는 곳)은 처음부터 반복하는 형식으로 맞춰줌.\n",
+        "- resize는 in-place"
+      ],
+      "metadata": {
+        "id": "EWPLGsO52Hak"
+      }
     },
     {
       "cell_type": "code",
@@ -109,7 +115,7 @@
         "id": "5DqrT6Xu30sZ",
         "outputId": "9f285c89-96a1-4d02-d95d-00aa585cfa59"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,6 +125,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `__repr__()`, `__str__()`\n",
+        "`__repr__()`은 값과 함께 타입을 보여줌. 개발자용. 문자열로 반환.\n",
+        "<br>`__str__()`은 값이 중요."
+      ],
+      "metadata": {
+        "id": "LZA0VRAW5GwR"
+      }
     },
     {
       "cell_type": "code",
@@ -133,7 +150,7 @@
         "id": "RCMsrmkV5erZ",
         "outputId": "af36e45d-8b5b-4b3c-faef-bc6e6abdd010"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +179,7 @@
         "id": "VpSD7iCO4hXm",
         "outputId": "609832bb-da65-4fb8-c462-a659d9265b73"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +207,7 @@
         "id": "o5EQzHeT5GLI",
         "outputId": "552533c0-fcc3-4464-bbbd-16c37133b380"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,41 +223,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`__repr__()`은 값과 함께 타입을 보여줌. 개발자용. 문자열로 반환.\n",
-        "<br>`__str__`()은 값이 중요."
-      ],
-      "metadata": {
-        "id": "LZA0VRAW5GwR"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BTJHnwXQCKlx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "list vs. ndarray vs. tensor\n",
-        "list\n",
-        ": 하나의 리스트에 모든 데이터 타입이 전부 들어갈 수 있음. -> 불균형하게 들어갈 수 있음.\n",
-        "boxed type\n",
+        "## list vs. ndarray vs. tensor\n",
+        "### list\n",
+        "- 하나의 리스트에 모든 데이터 타입이 전부 들어갈 수 있음. -> 불균형하게 들어갈 수 있음.\n",
+        "- boxed type\n",
         "\n",
-        "ndarray\n",
-        "c, c++에서의 어레이.\n",
-        "데이터가 모두 연결.\n",
-        "효율적.\n",
-        "자료형을 바꾸려면 새로 만들어야 함\n",
-        "주로 cpu와 ram에서 동작하는 것 위주로.\n",
-        "cpu 기반 병렬 처리\n",
+        "### ndarray\n",
+        "- c, c++에서의 어레이.\n",
+        "- 데이터가 모두 연결.\n",
+        "- 효율적.\n",
+        "- 자료형을 바꾸려면 새로 만들어야 함\n",
+        "- 주로 cpu와 ram에서 동작하는 것 위주로.\n",
+        "- cpu 기반 병렬 처리\n",
         "\n",
-        "tensor.\n",
-        "gpu 기반\n",
-        "cpu에서 썼을 때는 numpy가 훨씬 빠름."
+        "### tensor\n",
+        "- gpu 기반\n",
+        "- cpu에서 썼을 때는 numpy가 훨씬 빠름."
       ],
       "metadata": {
         "id": "9Q_EjffdCK4g"
@@ -249,29 +247,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "detach() vs. clone()\n",
+        "## `detach()` vs. `clone()`\n",
         "\n",
-        "clone()\n",
-        "모든 정보 copy.\n",
-        "연산 정보를 동시에 가지고 있음."
+        "### `detach()`\n",
+        "- 복사 대상 tensor와 memory 공유. -> 기존값이 변하면 복사된 값도 변함.\n",
+        "- 기울기 계산 그래프에서 제외됨.\n",
+        "\n",
+        "### `clone()`\n",
+        "- 모든 정보 copy, 새로운 메모리 할당.\n",
+        "- 연산 정보를 동시에 가지고 있음.\n",
+        "- in-place operation error 피할 수 있음.\n",
+        "\n",
+        "pytorch에서는 기울기가 계산되는 leaf node(requires_grad=True)에 대해서는 in-place operation이 금지되어 있음."
       ],
       "metadata": {
         "id": "RKACztBPDe9i"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "zDRWYHjyP_xC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "hook 한 번 찾아보기\n"
+        "## hook\n",
+        "- 패키지를 만드는 코드에서 중간에 원하는 코드를 삽입할 수 있는 기능.\n",
+        "- 순전파 이후 모델의 가중치를 변경하거나 파라미터 업데이트를 실시간으로 확인하는 등 바꾸고 싶은 모델을 변형하여 사용할 수 있음.\n",
+        "\n"
       ],
       "metadata": {
         "id": "eX_Ajx_NQAL_"
